--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,9 +8,14 @@
     <h1> {{title}} </h1>
     <p>Welcome to  {{title}} </p>
   </body>
+
+  <canvas id="my-chart"></canvas>
+  
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script src="http://api.coindesk.com/v1/bpi/historical/close.json"></script>
 
   <script src="/javascripts/financial-data.js" charset="utf-8"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 </html>
